# Neural-Scalpel

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile.vllm-scalpel  LICENSE  MODEL_LICENSE_POLICY.md  README.md  SECURITY.md  TECHNICAL_REPORT.md  TEST_INSTRUCTIONS.txt  TEST_REPORT.md  docker-compose.vllm-scalpel.yml  pyproject.toml  setup.py  verify_result.txt
dashboards/: grafana_scalpel_runtime.json
docs/: ADVANCED_FEATURES_DECISION_RECORD.md  BEHAVIORAL_ALIGNMENT_NOTES.md  COMPARISON_WITH_EXISTING_SERVING.md  DEPLOYMENT.md  EMPIRICAL_BENCHMARK_LOG.md  EXTERNAL_PROXY_FALLBACK_DEFINITION.md  HOTSWAP_RUNTIME_PHASE_C_REPORT.md  HOTSWAP_RUNTIME_PHASE_D_REPORT.md  HOTSWAP_RUNTIME_PRODUCTION_READINESS_REPORT.md  INTERFERENCE_AWARE_PROJECTION_GATE_DEFINITION.md  KNOWN_LIMITATIONS.md  LOGIC_CONSISTENCY_REPORT.md  MODEL_COMPATIBILITY_MATRIX.md  OBSERVABILITY.md  PAIRED_ALIGNMENT_CORE_MIGRATION_DEFINITION.md  PERFORMANCE_REGRESSION_REPORT.md  PRECISE_PERFORMANCE_REGRESSION.md  PRODUCTION_CERTIFICATION.md  PRODUCTION_READINESS_CRITERIA.md  REPRODUCIBILITY.md  RESEARCH_AND_COMMERCIAL_ROADMAP.md  ROUTE_TASK_EVALUATION.md  RUNBOOK.md  SCALPEL_ROUTE_SPEC.md  SECURITY_HARDENING.md  SOURCE_ADAPTER_QUALITY_GATE_DEFINITION.md  SUPPORTED_ENVIRONMENTS.md  TECH_ARTICLE_DRAFT.md  USAGE.md  VERSION_LOCK.md  VLLM_INTEGRATION_TEST.md  VLLM_INTERNAL_HOOK_MAP.md  VLLM_INTERNAL_INTEGRATION_DESIGN.md  phase_5c_benchmark_report.md
examples/: llama3_to_qwen2_port.py  route_task_demo.py  run_dynamic_route_demo.py  verify_real_safetensors.py
neural_scalpel/: __init__.py  __main__.py
reports/: bench_vllm_native_lora.json  bench_vllm_scalpel_overhead.json  diagnostics_report.md  example_before_after_samples.jsonl  example_diagnostics_report.md  example_failure_cases.md  example_metrics.json  hf_model_card_draft.md  metrics.json  phase_4_verification.md  phase_5e_3plus_mixed_batch.json  phase_5e_alternating_2route.json  phase_5e_alternating_3route.json  source_quality_gate_qwen_coder_7b_dpo_sql50.md
scratch/: probe_vllm.py  test_qwen.py
scripts/: 20_sql_capability_eval.py  adapter_transfer_diagnostic.py  bench_existing_methods.py  bench_vllm_native_lora.py  bench_vllm_precise_latency.py  bench_vllm_scalpel_overhead.py  bench_vllm_vanilla_vs_scalpel.py  compute_module_risk.py  phase_4b_actual_eval.py  phase_4b_eval_vllm.py  prepare_actual_lora_payload.py  run_phase_5d_median.py  run_phase_5d_worker.py  run_phase_5e_3plus_mixed_batch.py  run_phase_5e_mixed_batch.py  run_phase_5f_determinism.py  soak_vllm_scalpel.py  test_determinism.py  (+6 more)
(+324 files in other folders)
