[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-scalpel"
version = "1.0.0"
description = "A mathematical framework for cross-architecture intelligence transplantation."
license = {text = "Apache-2.0"}
authors = [
    {name = "Ponpoke", email = "ponpoke10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "gguf>=0.6.0",
]

[project.optional-dependencies]
cli = [
    "transformers",
    "safetensors",
    "peft",
    "fastapi",
    "uvicorn"
]
experimental = [
    "vllm",
    "sglang"
]
test = [
    "pytest",
    "jsonschema"
]

[project.scripts]
neural-scalpel = "neural_scalpel.cli.main:main"
