[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-scalpel"
version = "2.2.0"
description = "A mathematical framework for cross-architecture intelligence transplantation."
license = {text = "Apache-2.0"}
authors = [
    {name = "Ponpoke", email = "ponpoke10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "gguf>=0.6.0",
    "huggingface_hub",
    "sqlglot",
]

[project.optional-dependencies]
cli = [
    "transformers",
    "huggingface_hub",
    "safetensors",
    "peft",
    "sqlglot",
    "fastapi",
    "uvicorn",
    "pyjwt",
    "httpx",
]
serving = [
    "fastapi",
    "uvicorn",
    "pyjwt",
    "httpx",
    "prometheus-client",
]
experimental = [
    "vllm",
    "sglang"
]
test = [
    "pytest",
    "jsonschema"
]

[project.scripts]
neural-scalpel = "neural_scalpel.cli.__main__:main"

[tool.pytest.ini_options]
markers = [
    "vllm_live: marks tests that require a live vLLM engine and significant GPU memory (deselect with '-m \"not vllm_live\"')",
]
